--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <header>
-      <a href="/"><span>Web</span>Studio</a>
-
       <nav>
+        <a href="./index.html">WebStudio</a>
+
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -108,7 +108,7 @@
     </main>
 
     <footer>
-      <a href="/"><span>Web</span>Studio</a>
+      <a href="./index.html">WebStudio</a>
 
       <p>
         Increase the flow of customers and sales for your business with digital
